[vr] Make sure to ondemand update assets component when entering VR

Previously, there was a race condition. The ondemand update could be
requested before the component was registered.

Bug: 851666
Change-Id: I5d2162a87748f93bdf902f78c8cbe63292d65201
Reviewed-on: https://chromium-review.googlesource.com/1097705
Commit-Queue: Tibor Goldschwendt <tiborg@chromium.org>
Reviewed-by: Michael Thiessen <mthiesse@chromium.org>
Reviewed-by: Joshua Pawlicki <waffles@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567275}
Former-commit-id: 9d70171808d3e03880f974d0878eb62fd82b7fad