chrome/browser/component_updater/vr_assets_component_installer.cc
@@ -45,10 +45,35 @@ const base::FilePath::CharType kRelativeInstallDir[] =
 
 namespace component_updater {
 
+bool VrAssetsComponentInstallerPolicy::registration_pending_ = false;
+bool VrAssetsComponentInstallerPolicy::ondemand_update_pending_ = false;
+
+// static
+void VrAssetsComponentInstallerPolicy::RegisterComponent(
+    ComponentUpdateService* cus) {
+#if BUILDFLAG(USE_VR_ASSETS_COMPONENT)
+  const std::string crx_id = crx_file::id_util::GenerateIdFromHash(
+      kVrAssetsPublicKeySHA256, sizeof(kVrAssetsPublicKeySHA256));
+  std::unique_ptr<VrAssetsComponentInstallerPolicy> policy(
+      new VrAssetsComponentInstallerPolicy());
+  auto installer = base::MakeRefCounted<ComponentInstaller>(std::move(policy));
+  registration_pending_ = true;
+  installer->Register(
+      cus,
+      base::BindOnce(&VrAssetsComponentInstallerPolicy::OnRegisteredComponent,
+                     base::Unretained(cus)));
+#endif  // BUILDFLAG(USE_VR_ASSETS_COMPONENT)
+}
+
 // static
 void VrAssetsComponentInstallerPolicy::UpdateComponent(
     ComponentUpdateService* cus) {
 #if BUILDFLAG(USE_VR_ASSETS_COMPONENT)
+  if (registration_pending_) {
+    ondemand_update_pending_ = true;
+    return;
+  }
+  ondemand_update_pending_ = false;
   const std::string crx_id = crx_file::id_util::GenerateIdFromHash(
       kVrAssetsPublicKeySHA256, sizeof(kVrAssetsPublicKeySHA256));
   // Make sure the component is registered.
@@ -56,6 +81,17 @@ void VrAssetsComponentInstallerPolicy::UpdateComponent(
   cus->GetOnDemandUpdater().OnDemandUpdate(
       crx_id, base::BindOnce([](update_client::Error error) { return; }));
 #endif  // BUILDFLAG(USE_VR_ASSETS_COMPONENT)
+}
+
+// static
+void VrAssetsComponentInstallerPolicy::OnRegisteredComponent(
+    ComponentUpdateService* cus) {
+  vr::AssetsLoader::GetInstance()->GetMetricsHelper()->OnRegisteredComponent();
+  VLOG(1) << "Registered VR assets component";
+  registration_pending_ = false;
+  if (ondemand_update_pending_) {
+    UpdateComponent(cus);
+  }
 }
 
 bool VrAssetsComponentInstallerPolicy::
@@ -148,14 +184,7 @@ std::vector<std::string> VrAssetsComponentInstallerPolicy::GetMimeTypes()
 }
 
 void RegisterVrAssetsComponent(ComponentUpdateService* cus) {
-#if BUILDFLAG(USE_VR_ASSETS_COMPONENT)
-  std::unique_ptr<ComponentInstallerPolicy> policy(
-      new VrAssetsComponentInstallerPolicy());
-  auto installer = base::MakeRefCounted<ComponentInstaller>(std::move(policy));
-  installer->Register(cus, base::Closure());
-  vr::AssetsLoader::GetInstance()->GetMetricsHelper()->OnRegisteredComponent();
-  VLOG(1) << "Registered VR assets component";
-#endif  // BUILDFLAG(USE_VR_ASSETS_COMPONENT)
+  VrAssetsComponentInstallerPolicy::RegisterComponent(cus);
 }
 
 void UpdateVrAssetsComponent(ComponentUpdateService* cus) {
